# rp2040-embedded-game-engine

./: CMakeLists.txt  LICENSE  README.md
common/display/: display_ssd1306.c  display_ssd1306.h
common/input/: input.c  input.h
hardware/: README.md
paradox-drift/: CMakeLists.txt  README.md  paradox_drift.wokwi  wokwi.toml
paradox-drift/include/: asteroids_game.h  paradox_drift.h
paradox-drift/src/: asteroids_game.c  main.c  paradox_drift.c
snake/: CMakeLists.txt  README.md  diagram.json  read_serial.ps1  wokwi.toml
snake/include/: snake_game.h
snake/src/: main.c  snake_game.c
